@@ -52,6 +52,7 @@ public:
 		OBSERVE_STOP,
 		RECORD_STOP,
 		CLOCK_BREAK,
+		MANUAL_BREAK,
 		RECORD_START,
 		OBSERVE_START,
 		JOB_START,
@@ -89,7 +90,7 @@ public:
 	void logicalAnd(const VexInterval &v);
 	void logicalOr(double start, double stop);
 	void logicalOr(const VexInterval &v);
-	bool isWithin(VexInterval &v) { return (mjdStart >= v.mjdStart) && (mjdStop <= v.mjdStop); }
+	bool contains(double mjd) { return (mjdStart <= mjd) && (mjd <= mjdStop); }
 	bool isCausal() { return (mjdStart <= mjdStop); }
 };
 
@@ -310,6 +311,7 @@ public:
 	VexMode *newMode();
 	VexAntenna *newAntenna();
 	VexEOP *newEOP();
+	void addBreaks(const vector<double> &breaks);
 
 	double obsStart() const
 	{
